# Conversor_Romanos

./: CMakeCache.txt  CMakeLists.txt  ConverteInteiro.hpp  ConverteRomano.hpp  Makefile  Project.cbp  README.md  Testes  ValidaRomano.hpp  cmake_install.cmake  executeTestes  gTest.cpp
